# sfml-minitsc

./: .gitmodules  CMakeLists.txt  README
src/: app.cpp  app.hpp  main.cpp  scene_manager.cpp  scene_manager.hpp  scenery.cpp  scenery.hpp  texture_manager.cpp  texture_manager.hpp
src/actors/: actor.cpp  actor.hpp  player_actor.cpp  player_actor.hpp  static_actor.cpp  static_actor.hpp
src/scenes/: level_scene.cpp  level_scene.hpp  menu_scene.cpp  menu_scene.hpp  scene.cpp  scene.hpp
